new next app creation

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -42,8 +42,8 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
+  max-width: var(--max-width);
+  width: 100%;
 }
 
 .card {
@@ -97,7 +97,7 @@
 
 .center::before,
 .center::after {
-  content: '';
+  content: "";
   left: 50%;
   position: absolute;
   filter: blur(45px);
